@@ -1056,6 +1056,15 @@ public:
    * \return MCS 9 from VHT MCS values
    */
   static WifiMode GetVhtMcs9 ();
+  /**
+   * The standard disallows certain combinations of WifiMode, number of
+   * spatial streams, and channel widths.  This method can be used to
+   * check whether this WifiTxVector contains an invalid combination.
+   *
+   * \param txVector the WifiTxVector to inspect
+   * \return true if the WifiTxVector parameters are allowed by the standard
+   */
+  static bool IsValidTxVector (WifiTxVector txVector);
 
   /**
    * Public method used to fire a PhyTxBegin trace.
